kubernetes/celery-tasks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-tasks
  template:
    metadata:
      labels:
        app: celery-tasks
    spec:
      containers:
      - name: celery-tasks
        image: chickenleaf/celery:v1
        command: ["celery", "-A", "celery_tasks.celery_app", "worker", "-P", "threads"]
