kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: submit-blog-service
spec:
  selector:
    app: submit-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: search-blog-service
spec:
  selector:
    app: search-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
